Updated for 17/12/2025 + bd-scss 3

--- a/src/theme/_dark.scss
+++ b/src/theme/_dark.scss
@@ -1,5 +1,5 @@
 .theme-dark,
-html.theme-dark #app-mount .theme-light .root__49fc1,
+html.theme-dark #app-mount .theme-light ._49fc18ba07c5025f-root,
 html.theme-dark .force-theme.theme-light {
 	--dark-bg-h: var(--dark-bg-hue, 218);
 	--dark-bg-s: var(--dark-bg-saturation, 15%);
