--- a/src/theme/app/_toolbar.scss
+++ b/src/theme/app/_toolbar.scss
@@ -1,13 +1,13 @@
 #app-mount {
 	.title-3qD0b-,
-	.container__9293f {
+	._9293f6b2fc12398a-container {
 		background: var(--background);
 		border: none;
 	}
-	.children__9293f:after {
+	._9293f6b2fc12398a-children:after {
 		content: none;
 	}
-	.searchBar__97492 {
+	._974928fe84ca9647-searchBar {
 		background: var(--background-dark);
 	}
 }
