--- a/src/theme/chat/_bars.scss
+++ b/src/theme/chat/_bars.scss
@@ -1,5 +1,5 @@
 #app-mount {
-	.newMessagesBar__0f481 {
+	._0f481cbbd7530492-newMessagesBar {
 		background: rgb(var(--accent), 1);
 		border-radius: var(--border-radius);
 		top: 10px;
@@ -10,7 +10,7 @@
 			font-weight: 600;
 		}
 	}
-	.jumpToPresentBar__0f481 {
+	._0f481cbbd7530492-jumpToPresentBar {
 		background: var(--background-light);
 		opacity: 1;
 		border-radius: var(--border-radius);
@@ -21,22 +21,22 @@
 		.barButtonMain-3K-jeJ {
 			display: none;
 		}
-		.barButtonBase__0f481 {
+		._0f481cbbd7530492-barButtonBase {
 			padding: 10px;
 			height: auto;
 			line-height: normal;
 			color: var(--text-normal);
 		}
-		.spinner__0f481 {
+		._0f481cbbd7530492-spinner {
 			padding-left: 12px;
 		}
 	}
 
 	// Reply to message
-	.stackedBars__74017 {
+	._740174f3d6a2c8fe-stackedBars {
 		background: var(--background);
 	}
-	.replyBar__841c8 {
+	._841c8f861f7b2704-replyBar {
 		background: var(--background-light);
 	}
 }
