--- a/src/theme/chat/_container.scss
+++ b/src/theme/chat/_container.scss
@@ -1,22 +1,22 @@
 #app-mount {
-	.chat_f75fb0 {
+	.f75fb00fb7356cbe-chat {
 		background: var(--background);
 		border: none;
-		.scrollerSpacer__36d07 {
+		._36d072eab2b2e737-scrollerSpacer {
 			height: 25px;
 		}
-		.content_f75fb0:before {
+		.f75fb00fb7356cbe-content:before {
 			content: none;
 		}
 	}
-	.chatContent_f75fb0 {
+	.f75fb00fb7356cbe-chatContent {
 		background: transparent;
 	}
-	.operations_bab751 > a {
+	.bab7519355c8eed6-operations > a {
 		color: rgb(var(--accent), 1);
 	}
 
-    div.page__5e434 {
+    div._5e434347c823b592-page {
         border: none;
     }
 }
