--- a/src/theme/chat/_threads.scss
+++ b/src/theme/chat/_threads.scss
@@ -1,16 +1,16 @@
 #app-mount {
-	.container__01ae2 {
+	._01ae244280823725-container {
 		background: var(--background);
 	}
-	.divider_ee23ac {
+	.ee23ac2acd215184-divider {
 		background: var(--background-light);
 	}
-	.container__34c2c {
+	._34c2c51cfce1632e-container {
 		background: transparent;
 		border: none;
 		padding-right: 8px;
 	}
-	.chat_a44415::before {
+	.a44415a3320e67de-chat::before {
 		content: none;
 	}
 }
