--- a/src/theme/guilds/_container.scss
+++ b/src/theme/guilds/_container.scss
@@ -1,9 +1,9 @@
-#app-mount .guilds__5e434 {
+#app-mount ._5e434347c823b592-guilds {
 	background: var(--background-dark);
 	.footer__214dc {
 		--background-tertiary: var(--background-dark);
 	}
-	.scrollerBase_d125d2 {
+	.d125d22cdfd32cfe-scrollerBase {
 		background: var(--background-dark);
 		&::-webkit-scrollbar {
 			display: none;
