--- a/src/theme/inputs/_button.scss
+++ b/src/theme/inputs/_button.scss
@@ -1,6 +1,6 @@
 #app-mount {
 	// Brand/Blurple buttons
-	.lookFilled__201d5.colorBrand__201d5 {
+	._201d5e8a3c09670a-lookFilled._201d5e8a3c09670a-colorBrand {
 		background: rgb(var(--accent), 1);
 		color: var(--accent-text);
 		font-weight: 600;
@@ -21,7 +21,7 @@
 	}
 
 	// Panel buttons
-	.button__201d5.buttonColor_e131a9 {
+	._201d5e8a3c09670a-button.e131a99484292a19-buttonColor {
 		background: var(--background-light);
 		&:hover {
 			background: rgb(var(--accent), 1);
