--- a/src/theme/inputs/_input.scss
+++ b/src/theme/inputs/_input.scss
@@ -1,4 +1,4 @@
-#app-mount .input__0ed4f:not(.multiInput-1VARjC) {
+#app-mount ._0ed4fc708cdbac0d-input:not(.multiInput-1VARjC) {
 	background: var(--background);
 	border: 1px solid var(--background);
 	border-radius: var(--border-radius);
