--- a/src/theme/members/_container.scss
+++ b/src/theme/members/_container.scss
@@ -1,7 +1,7 @@
 #app-mount {
-	.container_c8ffbb,
-	.members_c8ffbb,
-	.members_c8ffbb > div {
+	.c8ffbb79449f399c-container,
+	.c8ffbb79449f399c-members,
+	.c8ffbb79449f399c-members > div {
 		background: transparent;
 		border: none;
 	}
