--- a/src/theme/modals/_deletemessage.scss
+++ b/src/theme/modals/_deletemessage.scss
@@ -1,7 +1,7 @@
-#app-mount .message_fd14e0 {
+#app-mount .fd14e024a43b9049-message {
 	background: var(--background-alt);
 	box-shadow: none;
-	.cozy_c19a55 {
+	.c19a557985eb7793-cozy {
 		margin: 0 !important;
 	}
 }
