--- a/src/theme/modals/_quickswitcher.scss
+++ b/src/theme/modals/_quickswitcher.scss
@@ -1,11 +1,11 @@
 #app-mount {
-	.quickswitcher_ac6cb0 {
+	.ac6cb02cd15b4b3b-quickswitcher {
 		background: var(--background);
 	}
-	.scroller_ac6cb0 {
+	.ac6cb02cd15b4b3b-scroller {
 		background: transparent;
 	}
-	.input_ac6cb0 {
+	.ac6cb02cd15b4b3b-input {
 		background: var(--background-light);
 		box-shadow: var(--box-shadow);
 		padding: 0 24px;
