--- a/src/theme/modals/_uploadfile.scss
+++ b/src/theme/modals/_uploadfile.scss
@@ -6,7 +6,7 @@
 		background: var(--background-alt);
 		box-shadow: none;
 	}
-	.slateTextArea_ec4baf {
+	.ec4baf0360ff3578-slateTextArea {
 		padding-left: 15px;
 	}
 }
