--- a/src/theme/popouts/_autocomplete.scss
+++ b/src/theme/popouts/_autocomplete.scss
@@ -1,8 +1,8 @@
 #app-mount {
-	.autocomplete__13533 {
+	._13533e3c5791980f-autocomplete {
 		background: var(--background-light);
 		box-shadow: var(--box-shadow);
-		.categoryHeader_d1405b {
+		.d1405bf11dcfb07a-categoryHeader {
 			background: var(--background-light);
 		}
 	}
