--- a/src/theme/popouts/_inbox.scss
+++ b/src/theme/popouts/_inbox.scss
@@ -1,50 +1,50 @@
 #app-mount {
-	.container__95796 {
+	._957962c2bd49881b-container {
 		margin: 20px 0;
 	}
-	.channelHeader__35a7e {
+	._35a7ecf3aba351b2-channelHeader {
 		background: var(--background-light-alt);
 		padding: 16px;
 	}
-	.messageContainer__95796 {
+	._957962c2bd49881b-messageContainer {
 		border-radius: 0 0 var(--border-radius) var(--border-radius);
 		background: var(--background-alt);
 		border: none;
 	}
 
-	.messagesScroller__4ad69 {
+	._4ad6936dd30096b3-messagesScroller {
 	    background: var(--background-light);
 	}
 
-	.messageContainer__4ad69 {
+	._4ad6936dd30096b3-messageContainer {
 		background: var(--background-alt);
   	    border: none;
 	}
 
-	.message__4ad69 {
+	._4ad6936dd30096b3-message {
 		margin-top: 10px!important;
 	}
 
-	.channelHeader__35a7e {
+	._35a7ecf3aba351b2-channelHeader {
   		border-radius: 6px;
   		margin-left: 15px;
 	}
 
-	.scroller__2692d {
+	._2692d04af6567ec8-scroller {
   		background: var(--background-light);
 	}
 
-	.messages__1ccd1 {
+	._1ccd1ba5cb2270c2-messages {
   		background: var(--background-alt);
   		border: none;
 	}
 
-	.channel__427f0 .channelHeader__35a7e {
+	._427f0273a157ab7a-channel ._35a7ecf3aba351b2-channelHeader {
   		margin-left: unset;
     	position: unset;
 	}
 
-	.container__0f711 {
+	._0f7115b4703f7b3a-container {
     	background: var(--background-light);
     	padding-left: 15px;
 	}
