--- a/src/theme/popouts/_pins.scss
+++ b/src/theme/popouts/_pins.scss
@@ -1,19 +1,19 @@
 #app-mount {
-	.messagesPopoutWrap_e8b59c {
+	.e8b59c4b335dd2fc-messagesPopoutWrap {
 		background: var(--background-light);
 		box-shadow: var(--box-shadow);
 		border-radius: var(--border-radius);
 	}
-	.header_e8b59c {
+	.e8b59c4b335dd2fc-header {
 		background: var(--background-alt);
 		box-shadow: var(--box-shadow);
 		z-index: 2;
 	}
-	.messageGroupWrapper_e8b59c {
+	.e8b59c4b335dd2fc-messageGroupWrapper {
 		background: var(--background-alt);
 		border: none;
 	}
-	.messageGroupCozy_e8b59c {
+	.e8b59c4b335dd2fc-messageGroupCozy {
 		margin: 0 !important;
 		padding: 8px 8px 8px 0 !important;
 	}
