--- a/src/theme/popouts/_search.scss
+++ b/src/theme/popouts/_search.scss
@@ -1,9 +1,9 @@
 #app-mount {
-	.container__55c99 {
+	._55c999adcf6db265-container {
 		background: var(--background-light);
 		box-shadow: var(--box-shadow);
 	}
-	.option__56fec {
+	._56fec8e8b8048fe0-option {
 		&:after {
 			background: linear-gradient(90deg, transparent, var(--background-light));
 		}
