--- a/src/theme/popouts/_threads.scss
+++ b/src/theme/popouts/_threads.scss
@@ -1,13 +1,13 @@
 #app-mount {
-	.container_d9c882 {
+	.d9c8822889d1d4a1-container {
 		background: var(--background-light);
 		box-shadow: var(--box-shadow);
 		border-radius: var(--border-radius);
 	}
-	.header_d9c882 {
+	.d9c8822889d1d4a1-header {
 		background: var(--background-alt);
 	}
-	.container__6764b {
+	._6764bd76e0340219-container {
 		background: var(--background-alt);
 		border-radius: var(--border-radius);
 		border: none;
