--- a/src/theme/popouts/_userpopout.scss
+++ b/src/theme/popouts/_userpopout.scss
@@ -7,7 +7,7 @@
 		.roles_fa2f72 {
 			gap: 4px;
 		}
-		.role_dfa8b6 {
+		.dfa8b6b94cddb191-role {
 			margin: 0;
 			background: transparent;
 			position: relative;
@@ -15,7 +15,7 @@
 			overflow: hidden;
 			gap: 6px;
 			padding: 6px;
-			.roleCircle__4f569 {
+			._4f569b8941af22d1-roleCircle {
 				position: unset;
 				overflow: visible;
 				filter: none;
@@ -30,17 +30,17 @@
 					pointer-events: none;
 				}
 			}
-			.roleRemoveButton_dfa8b6 {
+			.dfa8b6b94cddb191-roleRemoveButton {
 				position: unset;
-				& + .roleName__48c1c {
+				& + ._48c1c0768f2a2421-roleName {
 					position: relative;
 					z-index: 1;
 				}
 			}
-			.roleRemoveIcon__48c1c {
+			._48c1c0768f2a2421-roleRemoveIcon {
 				left: 12px;
 			}
-			.roleName__48c1c {
+			._48c1c0768f2a2421-roleName {
 				margin: 0;
 				color: var(--text-focus);
 			}
