--- a/src/theme/settings/guild/_roles.scss
+++ b/src/theme/settings/guild/_roles.scss
@@ -1,12 +1,12 @@
 #app-mount {
-	.sidebar_e29cd7 {
+	.e29cd7b93c4f1266-sidebar {
 		border: none;
 	}
-	.titleContainer_e29cd7 {
+	.e29cd7b93c4f1266-titleContainer {
 		background: var(--background);
 		box-shadow: none;
 	}
-	.header_c6bf1b {
+	.c6bf1b7af480dfda-header {
 		background: var(--background);
 		box-shadow: none;
 	}
