--- a/src/theme/settings/user/_account.scss
+++ b/src/theme/settings/user/_account.scss
@@ -1,14 +1,14 @@
 #app-mount {
     // Main Info Box
-    .accountProfileCard__1fed1 {
+    ._1fed1dd06c7aabf7-accountProfileCard {
         background: var(--background-dark);
     }
-    .background__1fed1, .fieldList__1fed1 {
+    ._1fed1dd06c7aabf7-background, ._1fed1dd06c7aabf7-fieldList {
         background: var(--background-alt);
     }
 
     // Security Keys
-    .credentialList__6c75d {
+    ._6c75d92c128c46b0-credentialList {
         background: var(--background-light-alt);
     }
 }
