--- a/src/theme/settings/user/_connects.scss
+++ b/src/theme/settings/user/_connects.scss
@@ -1,35 +1,35 @@
 #app-mount {
     // Authorized Apps
     // Info box
-    .card__73069 {
+    ._730694f5672c9601-card {
         background: var(--background-light-alt); 
         border: none;
     }
 
     // Cards
-    .actionMenuButton_d84e0f {
+    .d84e0fd1f07926c7-actionMenuButton {
         background: var(--background-light);
     }
-    .headerV2__50a54 {
+    ._50a5493e9d9cc496-headerV2 {
         background: var(--background-alt);
     }
-    .appDetailsContainer__50a54 {
+    ._50a5493e9d9cc496-appDetailsContainer {
         background: var(--background-light-alt);
     }
-    .appAvatarV2__50a54 {
+    ._50a5493e9d9cc496-appAvatarV2 {
         border: none;
     }
 
     // Connections
     //Cards
-    .connection_c7f964 {background: var(--background-light-alt);
+    .c7f964e7e0fc8b47-connection {background: var(--background-light-alt);
         border: none;
     }
     // Subscription enabled Servers box
-    .integrationWrapper_c7f964 {background: var(--background);
+    .c7f964e7e0fc8b47-integrationWrapper {background: var(--background);
     }
     // Metadata box
-    .metadataContainer_c7f964 {background: var(--background);
+    .c7f964e7e0fc8b47-metadataContainer {background: var(--background);
         border: none;
     }
 }
