--- a/src/theme/settings/user/_family.scss
+++ b/src/theme/settings/user/_family.scss
@@ -1,11 +1,11 @@
 #app-mount {
     // Cards
-    .box_f8c98c {
+    .f8c98cc3d7c1bc42-box {
         background: var(--background-light-alt);
         border: none;
         box-shadow: none;
     }
-    .row__0624f {
+    ._0624fc41b766635c-row {
         background: var(--background-dark);
         border: none;
     }
