--- a/src/theme/settings/user/_main.scss
+++ b/src/theme/settings/user/_main.scss
@@ -1,26 +1,26 @@
 // New Settings Modal
 #app-mount {
     // Left scroller
-    .modalContent_e44912 {
+    .e4491282b6a5364a-modalContent {
         background: var(--background);
     }
-    .sidebar__409aa {
+    ._409aa1aeee28d5f7-sidebar {
         border: none;
     }
 
     // Shadow under the search bar
-    .fixedContent__409aa:after {
+    ._409aa1aeee28d5f7-fixedContent:after {
         background: none;
     }
 
     // Searchbar border
-    .wrapper__72c38 { 
+    ._72c3859781ebce8f-wrapper { 
         border: none;
     }
 
     // Right "main" side + header
-    .content_e9e3ed, 
-    .contentHeader_e9e3ed  { 
+    .e9e3ed8b8badfe05-content, 
+    .e9e3ed8b8badfe05-contentHeader  { 
         background: var(--background); 
         border: none;
     }
