--- a/src/theme/sidebar/_container.scss
+++ b/src/theme/sidebar/_container.scss
@@ -1,7 +1,7 @@
 #app-mount {
-	.container__2637a,
-	.sidebar__5e434,
-	.sidebar__5e434:after {
+	._2637a2609f343032-container,
+	._5e434347c823b592-sidebar,
+	._5e434347c823b592-sidebar:after {
 		background: var(--background);
 	}
 }
