--- a/src/theme/sidebar/_header.scss
+++ b/src/theme/sidebar/_header.scss
@@ -1,8 +1,8 @@
 #app-mount {
-	.selected_f37cb1 .header_f37cb1 {
+	.selected_f37cb1 .f37cb1984c371ee5-header {
 		background: transparent;
 	}
-	.header_f37cb1 {
+	.f37cb1984c371ee5-header {
 		box-shadow: none;
 		border: none;
 		&:hover {
@@ -10,7 +10,7 @@
 		}
 	}
 
-	.searchBar_e6b769 {
+	.e6b7699ce8339e1c-searchBar {
 		box-shadow: none;
 		border: none;
 	}
