--- a/src/theme/sidebar/_panels.scss
+++ b/src/theme/sidebar/_panels.scss
@@ -1,22 +1,22 @@
 #app-mount {
-	.panels__5e434 {
+	._5e434347c823b592-panels {
 		background: var(--background);
 	}
-	.activityPanel__5e434 .container__37e49 {
+	._5e434347c823b592-activityPanel ._37e49614b9f110a9-container {
 		background: transparent;
 	}
-	.container__37e49,
-	.activityPanel__5e434 {
+	._37e49614b9f110a9-container,
+	._5e434347c823b592-activityPanel {
 		background: transparent;
 		border: none;
 	}
 
-	.scroller__7d20c {
+	._7d20cf18f8a2784c-scroller {
 		border: none;
 	}
 
 	// Quest-Box in the activity feed
-	.wrapper__11054 {
+	._11054c9baccea7a2-wrapper {
 		background: var(--background-light);
 	}
 
