--- a/src/theme/sidebar/_unreadbar.scss
+++ b/src/theme/sidebar/_unreadbar.scss
@@ -1,4 +1,4 @@
-#app-mount .sidebar__5e434 .bar__3b95d {
+#app-mount ._5e434347c823b592-sidebar ._3b95d7d910416e54-bar {
 	border-radius: var(--border-radius);
 	background: var(--background-light);
 	box-shadow: var(--box-shadow);
