--- a/src/theme/guilds/_folder.scss
+++ b/src/theme/guilds/_folder.scss
@@ -1,5 +1,5 @@
 #app-mount {
-	.folderGroupBackground__48112, .hiddenVisually_b18fe2 {
+	._48112cbe77dc5022-folderGroupBackground, .b18fe29d6fe8dd82-hiddenVisually {
 		background: var(--background-light);
 	}
 }
