--- a/src/theme/inputs/_checkbox.scss
+++ b/src/theme/inputs/_checkbox.scss
@@ -1,11 +1,11 @@
 #app-mount {
-	.container__3f21e {
+	._3f21e80f8677ec40-container {
 		transition: 0.15s ease background-color;
 		background: var(--background-dark) !important;
-		&.checked__3f21e {
+		&._3f21e80f8677ec40-checked {
 			background: rgb(var(--accent)) !important;
 		}
-		&:not([style*='rgb(128'], .checked__3f21e) {
+		&:not([style*='rgb(128'], ._3f21e80f8677ec40-checked) {
 			background: rgb(var(--accent), 0.5) !important;
 		}
 	}
@@ -13,7 +13,7 @@
 	// Checkbox row
 	.control__0d850.row-31nALW {
 		background: var(--background-light);
-		&.checked-1pZh2h .slider__3f21e {
+		&.checked-1pZh2h ._3f21e80f8677ec40-slider {
 			background: rgb(var(--accent), 1) !important;
 			border-color: rgb(var(--accent), 1) !important;
 		}
@@ -21,17 +21,17 @@
 
 	// Menu Checkbox
 	[role='menuitemcheckbox'][aria-checked='true'] {
-		.checkbox_c1e9c4 {
+		.c1e9c47c23f12ca3-checkbox {
 			color: rgb(var(--accent), 1);
 		}
-		.check_c1e9c4 {
+		.c1e9c47c23f12ca3-check {
 			color: var(--accent-text);
 		}
-		&.focused_c1e9c4 {
-			.checkbox_c1e9c4 {
+		&.c1e9c47c23f12ca3-focused {
+			.c1e9c47c23f12ca3-checkbox {
 				color: var(--accent-text);
 			}
-			.check_c1e9c4 {
+			.c1e9c47c23f12ca3-check {
 				color: rgb(var(--accent), 1);
 			}
 		}
