--- a/src/theme/members/_member.scss
+++ b/src/theme/members/_member.scss
@@ -1,46 +1,46 @@
-#app-mount .member__5d473 {
+#app-mount ._5d473ecff348c314-member {
 	background: transparent;
-	.botTagRegular__82f07 {
+	._82f0793afa59e5dc-botTagRegular {
 		background: rgb(var(--accent), 1);
 		color: var(--accent-text);
-		.botText__82f07 {
+		._82f0793afa59e5dc-botText {
 			font-weight: 600;
 		}
 	}
 
-	&:hover .layout__91a9d {
+	&:hover ._91a9d7f7e5248a56-layout {
 		background: var(--background-alt);
         width: 100%;
 	}
-	&:active .layout__91a9d {
+	&:active ._91a9d7f7e5248a56-layout {
 		background: var(--background-light);
         width: 100%;
 	}
-	&.selected__91a9d .layout__91a9d {
+	&._91a9d7f7e5248a56-selected ._91a9d7f7e5248a56-layout {
 		background: rgb(var(--accent), 1);
         width: 100%;
         .roleColor-rz2vM0,
 		.activity__5d473,
 		.premiumIcon-1rDbWQ,
-		.username__5d473 span {
+		._5d473ecff348c314-username span {
 			color: var(--accent-text) !important;
 		}
         // Applies to new Glow Names
-        .nameContainer__703b9 {
+        ._703b91fc872193e8-nameContainer {
         --custom-gradient-color-1: var(--accent-text) !important;
         --custom-gradient-color-2: var(--accent-text) !important;
         --custom-gradient-color-3: var(--accent-text) !important;
         }
-        .usernameGlow_e5de78 {
+        .e5de7811b2777bfa-usernameGlow {
             filter: none;
             transition: none;
         }
-        .usernameGlowActive_e5de78 {
+        .e5de7811b2777bfa-usernameGlowActive {
             filter: none;
             transition: none;
         }
         // New Tag after Name
-        .chipletContainerInner__10651 {
+        ._10651c5cfe637db6-chipletContainerInner {
             background: var(--background-light)
         }
         rect[fill='#43b581'],
@@ -50,17 +50,17 @@
 		}
 
 		// "App" Text on Bot Tag
-        .botTagRegular__82f07 {
+        ._82f0793afa59e5dc-botTagRegular {
 			background: var(--accent-text);
 			color: rgb(var(--accent), 1);
 		}
         // Little ✓ on Bot Tag if verified
-        .botTagVerified__82f07 path {
+        ._82f0793afa59e5dc-botTagVerified path {
             fill: #3283CF !important;
         }
 
     }
-    .childContainer__91a9d {
+    ._91a9d7f7e5248a56-childContainer {
         padding-right: 0%;
         padding-left: 0%;
     }
