--- a/src/theme/popouts/_emojipicker.scss
+++ b/src/theme/popouts/_emojipicker.scss
@@ -1,18 +1,18 @@
 #app-mount {
   // General background in all tabs
-  .contentWrapper__08434 {
+  ._084343c4f11eaaab-contentWrapper {
     background: var(--background);
   }
 
-  .emojiPicker_c0e32c .scroller_affa7e,
-    .wrapper__8ef02 .scroller_affa7e,
-      #emoji-picker-tab-panel .scroller_affa7e,
-        .drawerSizingWrapper__08434 :is(.scroller_affa7e, .content__99f8c) {
+  .c0e32c5cffed3d9f-emojiPicker .affa7e120767dd82-scroller,
+    ._8ef02eea17068b73-wrapper .affa7e120767dd82-scroller,
+      #emoji-picker-tab-panel .affa7e120767dd82-scroller,
+        ._084343c4f11eaaab-drawerSizingWrapper :is(.affa7e120767dd82-scroller, ._99f8cc7ad4790ce9-content) {
     background: var(--background);
   }
 
   // Those weird bars between the areas
-  .wrapper__14245 {
+  ._14245bb948377a25-wrapper {
     background: var(--background-light-alt);
     border-radius: 6px;
     margin-bottom: 8px;
@@ -23,19 +23,19 @@
   }
 
   // "Info"-bar at the bottom + the default-emoji/sticker button on the bottom left
-  .inspector_aeaaeb, .unicodeShortcut_b9ee0c, .standardStickerShortcut__3ad28 {
+  .aeaaeb2a573807f0-inspector, .b9ee0c229bc0b6bb-unicodeShortcut, ._3ad28b0867fa3fad-standardStickerShortcut {
       border: none;
 			background: var(--background);
 		}
 
   // Searchbar + background - in all tabs
-  .header_c0e32c, .header__8ef02, .header_fed6d3 {
+  .c0e32c5cffed3d9f-header, ._8ef02eea17068b73-header, .fed6d32841cc2da2-header {
     background: var(--background);
     border: none;
   }
 
   // Super-reaction button in the mini-modal
-  .label__0d242 {
+  ._0d242e583d6053f6-label {
     background-color: var(--background-light);
   }
 }
