--- a/src/theme/settings/user/_social.scss
+++ b/src/theme/settings/user/_social.scss
@@ -1,10 +1,10 @@
 #app-mount {
     // Blocked Accounts
-    .card__5cea9 {
+    ._5cea9da4c2ca012f-card {
         background: var(--background-alt);
         box-shadow: none;
     }
-    .header__5cea9 {
+    ._5cea9da4c2ca012f-header {
         background: var(--background-dark);
     }
 }
