--- a/src/theme/sidebar/_channel.scss
+++ b/src/theme/sidebar/_channel.scss
@@ -1,17 +1,17 @@
 #app-mount {
-	.wrapper__2ea32 {
+	._2ea32c412048f708-wrapper {
 		height: auto;
 		margin-bottom: 2px;
-		&.modeMuted__2ea32 .name__2ea32 {
+		&._2ea32c412048f708-modeMuted ._2ea32c412048f708-name {
 			color: var(--text-muted);
 		}
 
-		&.modeUnreadImportant__2ea32 .icon__2ea32 {
+		&._2ea32c412048f708-modeUnreadImportant ._2ea32c412048f708-icon {
 			color: var(--text-focus);
 		}
 
-		&.modeSelected__2ea32 {
-			.icon__2ea32 {
+		&._2ea32c412048f708-modeSelected {
+			._2ea32c412048f708-icon {
 				color: var(--text-focus);
 			}
 			&:before {
@@ -25,21 +25,21 @@
 			}
 		}
 
-		&.typeThread__2ea32 .link__2ea32 {
+		&._2ea32c412048f708-typeThread ._2ea32c412048f708-link {
 			padding-left: 42px;
 		}
 	}
-	.spine__5b40b {
+	._5b40bdd67543ba35-spine {
 		z-index: 1;
 	}
-	.wrapper__2ea32 {
+	._2ea32c412048f708-wrapper {
 		margin-left: 0;
 		border-radius: 0 var(--border-radius) var(--border-radius) 0;
 	}
-	.link__2ea32 {
+	._2ea32c412048f708-link {
 		padding-left: 16px;
 	}
-	.unread__2ea32 {
+	._2ea32c412048f708-unread {
 		z-index: 2;
 		left: 0;
 	}
@@ -51,7 +51,7 @@
 			inset 0 0 0 3px var(--background);
 	}
 
-	.sidebarList__5e434 {
+	._5e434347c823b592-sidebarList {
 		border: none;
 	}
 
