--- a/src/theme/settings/user/_main.scss
+++ b/src/theme/settings/user/_main.scss
@@ -24,4 +24,8 @@
         background: var(--background); 
         border: none;
     }
+
+    .caf372efc4d47562-itemContent {
+        color: var(--text-normal);
+    }
 }
