--- a/src/theme/app/_tooltips.scss
+++ b/src/theme/app/_tooltips.scss
@@ -4,7 +4,7 @@
 	}
 	.tooltipPrimary-3qLMbS {
 		background: var(--background-light);
-		box-shadow: var(--box-shadow);
+		box-shadow: none;
 	}
 	.tooltipPointer-3L49xb {
 		border-top-color: var(--background-light);
